--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <h1>Welcome to my Tip Calculator</h1>
 
         <label for="amountSpent">How much did you spend in total?</label>
-        <input type="text" name="" id="amountSpent">
+        <input type="number" name="amountSpent" id="amountSpent" placeholder="Input amount here">
+
+        <select name="rating" id="rating">
+            <option value="" disabled selected>Choose one of these</option>
+            <option value="Excellent">Excellent</option>
+            <option value="Good">Good</option>
+            <option value="Bad">Bad</option>
+        </select>
     </main>
 
 
