--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <option value="Good">Good</option>
             <option value="Bad">Bad</option>
         </select>
+
+        <p>
+            Your tip is: <span id="tip"></span>
+        </p>
     </main>
 
 
