--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p>
             Your tip is: <span id="tip"></span>
         </p>
+        <button class="calculate">Calculate</button>
     </main>
 
 
