--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <select name="rating" id="rating">
             <option value="" disabled selected>Choose one of these</option>
-            <option value="Excellent">Excellent</option>
-            <option value="Good">Good</option>
-            <option value="Bad">Bad</option>
+            <option value="0.2">Excellent</option>
+            <option value="0.1">Good</option>
+            <option value="0">Bad</option>
         </select>
 
         <p>
